--- a/oppgave_2/frontend/src/styles/css/main.css
+++ b/oppgave_2/frontend/src/styles/css/main.css
@@ -1,8 +1,31 @@
 @import '/frontend/src/styles/css/reset.css';
 @import './components/loading.css';
+@import './helpers/root.css';
+@import './components/navbar.css';
+@import './components/homepage.css';
+@import './components/dropdownmenu.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 :root{
+  /*Fonts*/
+    font-family: "Roboto", "Arial", "Helvetica";
+  --font: 'Roboto', sans-serif;
+
+  /* font weights */
+  --thin: 100;
+  --regular: 400;
+  --medium: 500;
+  --bold: 700;
+
+  /*constraints*/
+  --rootsize: 20px;
+  --maxsize: 1200px;
+  --pagewith: 700px;
+  --projectCardHeight: 350px;
+  --projectCardWith: 300px;
+  --ProjectCardMargin: 40px;
+
   /*colors*/
   --lightGreen: #d8fa00;
   --green: #b4cc1e;
@@ -10,21 +33,44 @@
 }
 
 
+  /* Fixed text sizes */
+  p { font-size: 1rem; font-weight: var(--regular); }
+  h2 { font-size: 2.5rem; font-weight: 700; }
+  h3 { font-size: 1.5rem; font-weight: 600; }
+  a {font-size: 1rem; font-weight: var(--medium); color: var(--orange); text-decoration: none; }
+  .bold {font-weight: var(--bold);}
+  ul {list-style: none;}
+
 
 html {
-  font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button{
+  color: var(--white);
+  font-weight: var(--bold);
+  background-color: var(--darkGray);
+  padding: .8rem 2rem;
+  border-radius: 50px;
+  margin: 0rem 0 0 0;
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  transition: background-color 0.2s ease, color 0.2s ease;
+  max-width: 10rem;
+
+  &:hover {
+      background-color: var(--green);
+      color: var(--darkGray)
+  }
 }
+
