feat: css for arrangement page done

--- a/oppgave_2/frontend/src/styles/css/helpers/root.css
+++ b/oppgave_2/frontend/src/styles/css/helpers/root.css
@@ -29,6 +29,7 @@
     --grayGreen: #bbc389;
     --darkGray: #191919;
     --gray:  #595959;
+    --mediumGray:  #7e7e7e;
     --lightGray: #9a9a9a;
     --white: #ffffff;
     --red: #df361f;
