--- a/oppgave_2/frontend/src/styles/css/components/eventpage.css
+++ b/oppgave_2/frontend/src/styles/css/components/eventpage.css
@@ -299,8 +299,9 @@
                 background-color: var(--darkGray);
                 border-radius: 10px;
                 margin-bottom: 2rem;
-                transform: translateY(20px);
-                animation: moveFadeIn 0.5s ease forwards;
+
+                z-index: auto;
+                position: relative;
 
                 .RegisteredParticipantCardName {
                     color: var(--white);
@@ -313,6 +314,262 @@
                     font-size: 1.5rem;
                     font-weight: var(--thin);
                     margin: 1rem;
+                }
+
+                .RegisteredParticipantCardStatus {
+                    color: var(--white); 
+                    margin-left: auto;
+                    margin-right: 2rem;
+                }
+
+                button {
+                    border-style: none;
+                    height: 100%;
+                    min-height: 3.9rem;
+                    width: 7rem;
+                    padding: 1rem;
+                    font-weight: var(--bold);
+                    font-size: 1rem;
+                    border-radius: 0 10px 10px 0;
+
+                }
+
+                .Godkjent {
+                    background-color: var(--green);
+                }
+
+                .Avslått {
+                    background-color: var(--red);
+                }
+
+                .Ingen {
+                    background-color: var(--lightGray);
+                }
+
+
+                .dropdownOptions {
+                    color: var(--white);
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    right: 0;
+                    align-items: center;
+                    background-color: var(--darkGray);
+                    top: 100%;
+                    width: 7rem;
+                    min-width: 2rem;
+                    z-index: 1; 
+                    margin: 0;
+                    padding: 0;
+            
+                    li{
+                        position: relative;
+                        margin: 0;
+                        width: 100%;
+                        text-align: center;
+                        padding: 1rem 0;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                       
+                    }
+
+                    .approved {
+                        &:hover {
+                            background-color: var(--green);
+                        } 
+                    }
+
+                    .denied {
+                        &:hover {
+                            background-color: var(--red);
+                        } 
+                    }
+
+                    .choseAction {
+                        &:hover {
+                            background-color: var(--gray);
+                        } 
+                    }
+        
+                }
+                button:hover + .dropdownOptions,
+                .dropdownOptions:hover {
+                    display: flex;    
+                }         
+            }
+
+            #eventPageAdminPanelAdminParticipants {
+                display: flex;
+                flex-direction: column;
+
+                #eventPageAdminPanelAdminParticipantsForms{
+                    display: flex;
+                    flex-direction: column;
+                    
+
+                    .adminParticipantFormCard{
+                        display: flex;
+                        flex-direction: row;
+                        position: relative;
+                        background-color: var(--darkGray);
+                        margin-bottom: 2rem;
+                        border-radius: 10px;
+                        width: 100%;
+
+                        .adminParticipantFormCardForm{
+                            width: 100%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: end;
+                            align-items: end;
+                            margin: 0 1rem;
+
+                            .adminParticipantFormCardNameSection{
+                                display: flex;
+                                flex-direction: row;
+                                align-items: end;
+                                width: 100%;
+
+                                input {
+                                    border-style: none;
+                                    margin: .3rem 0;
+                                    border-radius: 3px;
+                                    padding: .3rem .4rem;
+                                    flex-grow: 1;
+                                }
+
+                            }
+                            .adminParticipantFormCardEmailSection{
+                                display: flex;
+                                flex-direction: row;
+                                align-items: end;
+                                width: 100%;
+
+                                input {
+                                    border-style: none;
+                                    margin: .3rem 0;
+                                    border-radius: 3px;
+                                    padding: .3rem .4rem;
+                                    flex-grow: 1;
+                                }
+
+                            }
+                        }
+
+                        input {
+                            border-style: none;
+                            border-radius: 3px;
+                            padding: .3rem .4rem;
+                            
+                        }
+
+                        label {
+                            color: var(--white);
+                            margin: 0 .5rem;
+                            align-self: center;
+                            text-align: right;
+                        }
+
+                        button {
+                            border-style: none;
+                            height: 4.5rem;
+                            min-height: 3.9rem;
+                            width: 8rem;
+                            padding: 1rem;
+                            font-weight: var(--bold);
+                            font-size: 1rem;
+                            border-radius: 0 10px 10px 0;
+                            margin-left: auto;                            
+        
+                        }
+        
+                        .Godkjent {
+                            background-color: var(--green);
+                        }
+        
+                        .Avslått {
+                            background-color: var(--red);
+                        }
+        
+                        .Ingen {
+                            background-color: var(--lightGray);
+                        }
+        
+        
+                        .dropdownOptions {
+                            color: var(--white);
+                            display: none;
+                            flex-direction: column;
+                            position: absolute;
+                            align-items: center;
+                            background-color: var(--darkGray);
+                            width: 7rem;
+                            min-width: 2rem;
+                            z-index: 1; 
+                            margin: 0;
+                            padding: 0;
+                            right: 0;
+                            top: 4.2rem;
+
+                            li{
+                                position: relative;
+                                margin: 0;
+                                width: 100%;
+                                text-align: center;
+                                padding: 1rem 0;
+        
+                                &:hover {
+                                    cursor: pointer;
+                                }
+                               
+                            }
+        
+                            .approved {
+                                &:hover {
+                                    background-color: var(--green);
+                                } 
+                            }
+        
+                            .denied {
+                                &:hover {
+                                    background-color: var(--red);
+                                } 
+                            }
+        
+                            .choseAction {
+                                &:hover {
+                                    background-color: var(--gray);
+                                } 
+                            }
+                
+                        }
+                        button:hover + .dropdownOptions,
+                        .dropdownOptions:hover {
+                            display: flex;    
+                        }         
+                    
+                    }
+                }
+            }
+
+            #eventPageAdminPanelAdminParticipants {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 8rem;
+
+                #eventPageAdminPanelAdminParticipantsButtons {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: end;
+                    justify-content: end;
+                    margin-top: 1rem;
+
+                    button{
+                        margin-left: 1.5rem;
+                    }
+
                 }
             }
         }
