--- a/oppgave_2/frontend/src/styles/css/components/homepage.css
+++ b/oppgave_2/frontend/src/styles/css/components/homepage.css
@@ -62,6 +62,8 @@
         ul {
             li {
                 margin: 2rem 0;
+                transform: translateY(20px);
+                animation: moveFadeIn 0.5s ease forwards;
 
                 .eventCard{
                     display: flex;
